Tests/Resources/Bad/ERROR_NOT_A_REFERENCE/deref_infer.st
language core;
extend with #references;


fn main(n : Nat) -> Nat {
	return (fn (x : Nat) { return *n }) (0)
}
